@@ -1,0 +1,5 @@
+r
+l
+take laser
+kill all
+quit
