@@ -1,0 +1,33 @@
+Version 4.2, fall 1984.
+First Adventure game written by His Lordship, the honorable
+Admiral D.W. Riggle
+
+
+	This is a luxurious stateroom.
+The floor is carpeted with a soft animal fur and the great wooden furniture
+is inlaid with strips of platinum and gold.  Electronic equipment built
+into the walls and ceiling is flashing wildly.  The floor shudders and
+the sounds of dull explosions rumble though the room.  From a window in
+the wall ahead comes a view of darkest space.  There is a small adjoining
+room behind you, and a doorway right.
+
+>-: 
+	These are the executive suites of the battlestar.
+Luxurious staterooms carpeted with crushed velvet and adorned with beaten
+gold open onto this parlor. A wide staircase with ivory banisters leads
+up or down. This parlor leads into a hallway left. The bridal suite is
+right. Other rooms lie ahead and behind you.
+
+>-: 
+	The hallway ends here at the presidential suite.
+The door to this suite is made from solid magnesium, and the entryway is
+inlaid with diamonds and fire opals. The door is ajar ahead. The hallway
+goes back.
+
+There is a laser pistol here.
+>-: laser:
+Taken.
+>-: Your laser should do the trick.
+You can't kill that!
+>-: bye.
+Your rating was novice.
